Fix hamburger button hidden off-screen on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1152,6 +1152,10 @@ footer a {
         display: none;
     }
 
+    .nav-right {
+        margin-right: 0;
+    }
+
     .hamburger {
         display: flex;
     }
